--- a/README
+++ b/README
@@ -1,13 +1,4 @@
-# jokes
+140jokes
+-------------------------
 
-FIXME: write description
-
-## Usage
-
-FIXME: write
-
-## License
-
-Copyright (C) 2010 FIXME
-
-Distributed under the Eclipse Public License, the same as Clojure.
+This is a simple app that will store and randomly retrieve jokes that fit into 140 characters or less.  It owes its existence to the fact that I wanted to learn Clojure and Redis.
